# Autopsy

./: .gitignore  PHASE5_PLAN.md  PROMPT.md  README.md  pyproject.toml  to_do.md
examples/: anthropic_agent.py  batch_run.py  build_dogfood_dataset.py  classify_failure.py  compare_runs.py  dogfood_smolagents.py  evaluate_trace.py  mock_agent.py  track_trends.py
examples/datasets/: multihop_qa.json
examples/datasets/runs/: smolagents_run.json
src/autopsy/: __init__.py  _serialize.py  clients.py  pricing.py  schema.py  storage.py  taxonomy.py  tracing.py
src/autopsy/dashboard/: __init__.py  app.py
src/autopsy/eval/: __init__.py  aggregation.py  base.py  batch.py  classifier.py  comparison.py  dataset.py  history.py  judge.py  llm_metrics.py  models.py  rules.py  runner.py
tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
