[project]
name = "autopsy"
version = "0.0.1"
description = "Capture an agent's full execution trace and tell you not just whether it failed, but how and why — at the trajectory level."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yuvraj Srivastava" }]
keywords = ["agent", "evaluation", "observability", "tracing", "llm", "failure-analysis"]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8", "anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/yuvrajstark/autopsy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopsy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
